--- a/viewplay/src/main/res/layout/video_player.xml
+++ b/viewplay/src/main/res/layout/video_player.xml
@@ -3,7 +3,8 @@
     android:id="@+id/layout"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="210dp"
+    android:touchscreenBlocksFocus="true"
     android:background="@android:color/black"
     >
 
@@ -19,6 +20,7 @@
         android:layout_centerInParent="true"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:src="@mipmap/video_play_btn"
         />
 
     <include
@@ -34,64 +36,66 @@
         android:layout_centerInParent="true"
         android:visibility="gone" />
 
-    <LinearLayout
-        android:layout_alignParentLeft="true"
-        android:layout_marginLeft="20dp"
-        android:orientation="vertical"
-        android:visibility="gone"
-        android:id="@+id/sound_layout"
-        android:layout_centerVertical="true"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
 
-        <TextView
-            android:text="音量"
-            android:textColor="#fff"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
 
-        <com.github.jinsedeyuzhou.view.VSeekBar
-            android:id="@+id/sound_seek"
-            android:layout_marginTop="10dp"
-            android:layout_gravity="center"
-            android:layout_width="5dp"
-            android:layout_height="160dp"
-            android:maxHeight="5dp"
-            android:minHeight="5dp"
-            android:progressDrawable="@drawable/bg_seek"
-            android:thumb="@null"/>
-    </LinearLayout>
+    <!--<LinearLayout-->
+        <!--android:layout_alignParentLeft="true"-->
+        <!--android:layout_marginLeft="20dp"-->
+        <!--android:orientation="vertical"-->
+        <!--android:visibility="gone"-->
+        <!--android:id="@+id/sound_layout"-->
+        <!--android:layout_centerVertical="true"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content">-->
 
-    <LinearLayout
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="40dp"
-        android:orientation="vertical"
-        android:visibility="gone"
-        android:id="@+id/brightness_layout"
-        android:layout_centerVertical="true"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        <!--<TextView-->
+            <!--android:text="音量"-->
+            <!--android:textColor="#fff"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content" />-->
 
-        <TextView
-            android:text="亮度"
-            android:textColor="#fff"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+        <!--<com.github.jinsedeyuzhou.view.VSeekBar-->
+            <!--android:id="@+id/sound_seek"-->
+            <!--android:layout_marginTop="10dp"-->
+            <!--android:layout_gravity="center"-->
+            <!--android:layout_width="5dp"-->
+            <!--android:layout_height="160dp"-->
+            <!--android:maxHeight="5dp"-->
+            <!--android:minHeight="5dp"-->
+            <!--android:progressDrawable="@drawable/bg_seek"-->
+            <!--android:thumb="@null"/>-->
+    <!--</LinearLayout>-->
 
-        <com.github.jinsedeyuzhou.view.VSeekBar
-            android:id="@+id/brightness_seek"
-            android:layout_marginTop="10dp"
-            android:layout_gravity="center"
-            android:layout_width="5dp"
-            android:layout_height="160dp"
-            android:maxHeight="5dp"
-            android:minHeight="5dp"
-            android:progressDrawable="@drawable/bg_seek"
-            android:thumb="@null" />
-    </LinearLayout>
+    <!--<LinearLayout-->
+        <!--android:layout_alignParentRight="true"-->
+        <!--android:layout_marginRight="40dp"-->
+        <!--android:orientation="vertical"-->
+        <!--android:visibility="gone"-->
+        <!--android:id="@+id/brightness_layout"-->
+        <!--android:layout_centerVertical="true"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content">-->
 
+        <!--<TextView-->
+            <!--android:text="亮度"-->
+            <!--android:textColor="#fff"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content" />-->
+
+        <!--<com.github.jinsedeyuzhou.view.VSeekBar-->
+            <!--android:id="@+id/brightness_seek"-->
+            <!--android:layout_marginTop="10dp"-->
+            <!--android:layout_gravity="center"-->
+            <!--android:layout_width="5dp"-->
+            <!--android:layout_height="160dp"-->
+            <!--android:maxHeight="5dp"-->
+            <!--android:minHeight="5dp"-->
+            <!--android:progressDrawable="@drawable/bg_seek"-->
+            <!--android:thumb="@null" />-->
+    <!--</LinearLayout>-->
+
+    <include layout="@layout/player_gesture_touch"/>
     <TextView
-        android:visibility="gone"
         android:layout_centerHorizontal="true"
         android:textColor="#fff"
         android:layout_alignParentBottom="true"
@@ -102,8 +106,17 @@
         android:layout_height="wrap_content" />
 
     <include layout="@layout/player_toolbar"
-        android:id="@+id/player_toolbar"
         />
+
+    <ProgressBar
+        android:id="@+id/bottom_progressbar"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="match_parent"
+        android:layout_height="1.5dp"
+        android:layout_alignParentBottom="true"
+        android:max="1000"
+        android:visibility="invisible"
+        android:progressDrawable="@drawable/bg_seek"/>
 
 </RelativeLayout>
 
