--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,5 +12,12 @@
     <FrameLayout
         android:id="@+id/fl_content"
         android:layout_width="match_parent"
-        android:layout_height="210dp"/>
+        android:layout_height="wrap_content"/>
+    <Button
+        android:id="@+id/btn_video"
+        android:layout_below="@+id/fl_content"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="视频列表"
+        />
 </RelativeLayout>
