--- a/app/src/main/res/layout/item_video.xml
+++ b/app/src/main/res/layout/item_video.xml
@@ -13,7 +13,7 @@
         android:layout_height="200dp">
 
         <FrameLayout
-            android:id="@+id/layout_video"
+            android:id="@+id/layout_item_video"
             android:layout_width="match_parent"
             android:layout_height="200dp">
 
