--- a/viewplay/src/main/res/layout/player_controlbar.xml
+++ b/viewplay/src/main/res/layout/player_controlbar.xml
@@ -2,9 +2,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/transparent"
-    >
 
+    >
+    <!--android:background="@android:color/transparent"-->
     <RelativeLayout
         android:id="@+id/show"
         android:layout_width="match_parent"
@@ -17,16 +17,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:src="@mipmap/video_stop_btn" />
+            android:src="@drawable/play_selector" />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:layout_alignParentBottom="true"
-            android:layout_marginBottom="15dp"
-            android:layout_marginLeft="13dp"
-            android:layout_marginRight="13dp"
-            android:background="@android:color/transparent"
+            android:background="#99000000"
             android:gravity="center_vertical"
             android:orientation="horizontal">
 
@@ -48,16 +45,11 @@
 
             <SeekBar
                 android:id="@+id/seekbar"
+                style="@style/SeekBarAppTheme"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:layout_weight="1"
-                android:max="100"
-                android:maxHeight="2dp"
-                android:minHeight="2dp"
-                android:progressDrawable="@drawable/bg_seek"
-                android:thumb="@drawable/bg_thumb"
-                android:thumbOffset="10dp" />
+                />
 
             <TextView
                 android:id="@+id/all_time"
@@ -73,7 +65,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:layout_marginLeft="10dp"
-                android:src="@mipmap/full_screen_icon" />
+                android:src="@mipmap/ic_fullscreen_white_24dp" />
         </LinearLayout>
 
     </RelativeLayout>
