--- a/viewplay/src/main/res/layout/player_controlbar.xml
+++ b/viewplay/src/main/res/layout/player_controlbar.xml
@@ -23,6 +23,8 @@
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_alignParentBottom="true"
+            android:paddingRight="13dp"
+            android:paddingLeft="13dp"
             android:background="#99000000"
             android:gravity="center_vertical"
             android:orientation="horizontal">
