--- a/viewplay/src/main/res/layout/player_gesture_touch.xml
+++ b/viewplay/src/main/res/layout/player_gesture_touch.xml
@@ -1,52 +1,60 @@
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="152dp"
     android:id="@+id/ll_gesture_touch"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_centerInParent="true"
     android:visibility="gone"
+    android:background="@drawable/dialog_progress_bg"
     android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/image_tip"
-        android:layout_width="36dp"
-        android:layout_height="27dp"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="16dp" />
-
     <LinearLayout
-        android:id="@+id/ll_gesture"
-        android:layout_width="wrap_content"
+        android:layout_width="126dp"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="20dp"
-        android:gravity="center_horizontal"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/tv_current"
+        <ImageView
+            android:id="@+id/image_tip"
+            android:layout_width="34dp"
+            android:layout_height="34dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="16dp" />
+
+        <LinearLayout
+            android:id="@+id/ll_gesture"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="#fff85959"
-            android:textSize="14.0sp" />
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="8dp"
+            android:gravity="center_horizontal"
+            android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/tv_duration"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="#ffffffff"
-            android:textSize="14.0sp" />
+            <TextView
+                android:id="@+id/tv_current"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="#fff85959"
+                android:textSize="14.0sp" />
+
+            <TextView
+                android:id="@+id/tv_duration"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="#ffffffff"
+                android:textSize="14.0sp" />
+        </LinearLayout>
+
+        <ProgressBar
+            android:id="@+id/progressbar_gesture"
+            style="@android:style/Widget.ProgressBar.Horizontal"
+            android:layout_width="91dp"
+            android:layout_height="2dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="14dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginTop="8dp"
+            android:max="100"
+            android:progressDrawable="@drawable/gesture_touch" />
     </LinearLayout>
-
-    <ProgressBar
-        android:id="@+id/progressbar_gesture"
-        style="@android:style/Widget.ProgressBar.Horizontal"
-        android:layout_width="fill_parent"
-        android:layout_height="4dp"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginTop="8dp"
-        android:max="100"
-        android:progressDrawable="@drawable/gesture_touch" />
 </LinearLayout>
