--- a/viewplay/src/main/res/layout/player_toolbar.xml
+++ b/viewplay/src/main/res/layout/player_toolbar.xml
@@ -1,14 +1,16 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/app_video_top_box"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="44dp"
     android:gravity="center_vertical"
+    android:background="@android:color/transparent"
     >
 
     <ImageView
         android:id="@+id/iv_video_finish"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
         android:src="@drawable/ic_chevron_left_white_36dp" />
 
     <TextView
@@ -17,18 +19,20 @@
         android:layout_toRightOf="@+id/iv_video_finish"
         android:layout_height="wrap_content"
         android:ellipsize="marquee"
-        android:layout_weight="1"
-        android:padding="8dp"
+        android:layout_centerVertical="true"
         android:singleLine="true"
+        android:maxLength="20"
         android:text=";;llllll"
         android:textColor="@android:color/white"
-        android:textSize="14dp"
+        android:textSize="14sp"
         />
 
     <ImageView
         android:id="@+id/iv_video_lockScreen"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
         android:layout_alignParentRight="true"
-        android:src="@mipmap/ic_launcher" />
+        android:layout_marginRight="15dp"
+        android:src="@drawable/bg_share" />
 </RelativeLayout>
