--- a/viewplay/src/main/res/layout/video_player.xml
+++ b/viewplay/src/main/res/layout/video_player.xml
@@ -3,7 +3,7 @@
     android:id="@+id/layout"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="210dp"
+    android:layout_height="match_parent"
     android:touchscreenBlocksFocus="true"
     android:background="@android:color/black"
     >
@@ -37,6 +37,7 @@
         layout="@layout/player_controlbar"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
+
 
     <ProgressBar
         android:id="@+id/loading"
@@ -125,7 +126,6 @@
         android:layout_height="1.5dp"
         android:layout_alignParentBottom="true"
         android:max="1000"
-        android:visibility="invisible"
         android:progressDrawable="@drawable/bg_seek"/>
 
 </RelativeLayout>
