--- a/viewplay/src/main/res/layout/video_player.xml
+++ b/viewplay/src/main/res/layout/video_player.xml
@@ -14,7 +14,7 @@
         android:layout_height="match_parent"
         />
 
-    <LinearLayout
+    <RelativeLayout
         android:id="@+id/app_video_replay"
         android:gravity="center"
         android:visibility="gone"
@@ -23,12 +23,20 @@
         android:layout_height="match_parent">
         <ImageView
             android:id="@+id/pause_image"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_centerInParent="true"
+            android:scaleType="centerCrop"
+            />
+
+        <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
+            android:layout_centerInParent="true"
+            android:visibility="gone"
             android:src="@mipmap/video_play_btn"
             />
-    </LinearLayout>
+    </RelativeLayout>
 
 
 
