--- a/viewplay/src/main/res/layout/player_controlbar.xml
+++ b/viewplay/src/main/res/layout/player_controlbar.xml
@@ -10,7 +10,7 @@
         android:layout_centerInParent="true"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
-        android:src="@drawable/play_selector" />
+        android:src="@drawable/player_pause_play" />
 
     <LinearLayout
         android:background="#99000000"
