--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,16 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white"
-    tools:context=".MainActivity">
+    android:orientation="vertical">
 
-    <!--<com.github.sample.VideoListLayout-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent"/>-->
-    <FrameLayout
+    <com.github.jinsedeyuzhou.VPlayPlayer
         android:id="@+id/fl_content"
         android:layout_width="match_parent"
-        android:layout_height="210dp"/>
-</RelativeLayout>
+        android:layout_height="210dp">
+
+
+    </com.github.jinsedeyuzhou.VPlayPlayer>
+    <!--<Button-->
+    <!--android:layout_below="@id/fl_content"-->
+    <!--android:id="@+id/btn_list_video"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:visibility="gone"-->
+
+    <!--android:text="视频列表"-->
+    <!--/>-->
+</LinearLayout>
