--- a/app/src/main/res/layout/activity_video_list.xml
+++ b/app/src/main/res/layout/activity_video_list.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <com.github.sample.VideoListLayout
+    <com.github.sample.list.VideoListLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"/>
 </LinearLayout>
