--- a/viewplay/src/main/res/layout/player_toolbar.xml
+++ b/viewplay/src/main/res/layout/player_toolbar.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="44dp"
     android:gravity="center_vertical"
-    android:background="@android:color/black"
+    android:background="#66000000"
     >
 
     <ImageView
@@ -13,7 +13,8 @@
         android:layout_centerVertical="true"
         android:src="@drawable/ic_chevron_left_white_36dp" />
 
-    <TextView
+    <!--可以自定义实现跑马灯效果，这里不能获取到焦点-->
+    <com.github.jinsedeyuzhou.view.MarqueeTextView
         android:id="@+id/tv_video_title"
         android:layout_width="wrap_content"
         android:layout_toRightOf="@+id/iv_video_finish"
@@ -31,6 +32,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
+        android:padding="6dp"
         android:layout_toLeftOf="@+id/app_video_share"
         android:layout_marginRight="15dp"
         android:src="@mipmap/video_unlock" />
@@ -40,6 +42,7 @@
         android:id="@+id/app_video_share"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:padding="5dp"
         android:layout_centerVertical="true"
         android:layout_alignParentRight="true"
         android:layout_marginRight="15dp"
