--- a/viewplay/src/main/res/layout/video_player.xml
+++ b/viewplay/src/main/res/layout/video_player.xml
@@ -14,11 +14,28 @@
         android:layout_height="match_parent"
         />
 
+    <!-- status-->
+    <LinearLayout
+        android:id="@+id/app_video_status"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@android:color/background_dark"
+        android:gravity="center"
+        android:visibility="gone">
+
+        <TextView
+            android:id="@+id/app_video_status_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/small_problem"
+            android:textColor="@android:color/white"
+            android:textSize="14dp" />
+    </LinearLayout>
     <RelativeLayout
         android:id="@+id/app_video_replay"
         android:gravity="center"
         android:visibility="gone"
-        android:background="#B3616161"
+        android:background="#000"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <ImageView
@@ -26,7 +43,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_centerInParent="true"
-            android:scaleType="centerCrop"
+            android:scaleType="fitCenter"
             />
 
         <ImageView
