--- a/viewplay/src/main/res/layout/player_controlbar.xml
+++ b/viewplay/src/main/res/layout/player_controlbar.xml
@@ -13,6 +13,7 @@
         android:src="@drawable/player_pause_play" />
 
     <LinearLayout
+        android:id="@+id/ll_container_tools"
         android:background="#66000000"
         android:gravity="center_vertical"
         android:layout_alignParentBottom="true"
