--- a/viewplay/src/main/res/layout/player_toolbar.xml
+++ b/viewplay/src/main/res/layout/player_toolbar.xml
@@ -19,10 +19,10 @@
         android:layout_width="wrap_content"
         android:layout_toRightOf="@+id/iv_video_finish"
         android:layout_height="wrap_content"
-        android:ellipsize="marquee"
+        android:singleLine="true"
         android:layout_centerVertical="true"
-        android:maxLines="1"
-        android:maxLength="20"
+        android:maxEms="20"
+        android:ellipsize="end"
         android:textColor="@android:color/white"
         android:textSize="14sp"
         />
@@ -32,8 +32,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_alignParentRight="true"
         android:padding="6dp"
+        android:layout_alignParentRight="true"
         android:layout_toLeftOf="@+id/app_video_share"
         android:layout_marginRight="15dp"
         android:src="@mipmap/video_unlock" />
@@ -45,8 +45,8 @@
         android:layout_height="wrap_content"
         android:padding="5dp"
         android:layout_centerVertical="true"
+        android:visibility="gone"
         android:layout_alignParentRight="true"
         android:layout_marginRight="15dp"
-        android:visibility="gone"
         android:src="@drawable/player_share_select" />
 </RelativeLayout>
